# klondike

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  apple_contacts.h  apple_contacts.m  contact.h  contact_type.h  contacts.c  contacts.h  csv.h  email.h  error.c  error.h  klondike.plist  main.m  memory.h  options.h
klondike/: main.m
klondike.xcodeproj/: project.pbxproj
klondike.xcodeproj/xcshareddata/xcschemes/: klondike.xcscheme
klondike.xcodeproj/xcuserdata/donmcc.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: address.c  address.h  apple_contacts.h  apple_contacts.m  contact.c  contact.h  contacts.c  contacts.h  csv.c  csv.h  email.c  email.h  error.c  error.h  main.m  memory.c  memory.h  options.c  options.h  phone.c  phone.h
